# kelo-platform

./: CMakeLists.txt  README.md
include/kelo_platform/: EthercatCommunication.h  KeloBaseAPI.h  KeloDriveAPI.h  KeloDriveCommunication.h  Mediator.h  PowerManagementUnit.h
src/: EthercatCommunication.c  KeloDriveCommunication.c  Mediator.c  PowerManagementUnit.c
src/example/: CMakeLists.txt  mediator_test.c  mediator_test_cpp.cpp  pmu_control.c  single_wheel_test.c
